Update to Python 3.8

--- a/layer/Dockerfile
+++ b/layer/Dockerfile
@@ -1,13 +1,16 @@
-FROM amazonlinux:1
+FROM amazonlinux:2
 
-RUN yum install -y python36 python36-virtualenv zip && yum clean all
+RUN yum update -y && \
+    amazon-linux-extras install python3.8 && \
+    yum install zip -y && \
+    yum clean all
 
 COPY requirements.txt zip_layer.sh .
 
 RUN mkdir -p /layer/python && \
-    python3.6 -m venv /venv && \
-    source /venv/bin/activate && \
+    python3.8 -m venv venv && \
+    source venv/bin/activate && \
     pip install -U pip setuptools && \
-    pip install -r requirements.txt -t /layer/python/
+    pip install -r requirements.txt -t /layer/python
 
 CMD bash zip_layer.sh
