--- a/layer/Dockerfile
+++ b/layer/Dockerfile
@@ -5,12 +5,12 @@ RUN yum update -y && \
     yum install zip -y && \
     yum clean all
 
-COPY requirements.txt zip_layer.sh .
+COPY requirements.txt .
 
 RUN mkdir -p layer/python && \
     python3.8 -m venv venv && \
     source venv/bin/activate && \
     python3.8 -m pip install -U pip setuptools && \
-    python3.8 -m pip install -r requirements.txt -t /layer/python
+    python3.8 -m pip install -r requirements.txt -t layer/python
 
-CMD bash zip_layer.sh
+CMD cd layer && zip -r ../volume/layer.zip .
